# inkscape-trace

./: .gitignore  CMakeLists.txt  README.md  cielab.h  imagemap-gdk.h  imagemap.cpp  imagemap.h  main.cpp  pbitmap.h  pool.h  ppotrace.h  quantize.cpp  quantize.h  units.xml
2geom/: CMakeLists.txt  README.md
2geom/include/2geom/: arithmetic-interval.h  generic-interval.h  path.h
2geom/include/toys/: toy-framework-2.h
2geom/src/2geom/: elliptical-arc.cpp  geometric-intersection.cpp  line.cpp  path.cpp  sbasis-geometric.cpp
2geom/src/toys/: aa.cpp  bound-path.cpp  conic-6.cpp  draw-toy.cpp  intersect-data.cpp  kinematic_templates.cpp  pair-intersect.cpp  point-curve-nearest-time.cpp  sb-to-bez.cpp  sketch-fitter.cpp
2geom/tests/: arithmetic-interval-test.cpp  elliptical-arc-test.cpp
include/core/: core.h
include/core/image/: imagemap.h
include/core/svg/: svg.h
include/engines/: engines.h
include/engines/potrace/: pbitmap.h  potrace.h
include/filters/: filterset.h
include/filters/quantize/: pool.h  quantize.h
include/trace/: trace.h
lib2geom/: .gitignore  .gitlab-ci.yml
lib2geom/CMakeScripts/: CodeCoverage.cmake
lib2geom/include/2geom/: arithmetic-interval-utils.h  basic-intersection.h  elliptical-arc.h  generic-rect.h  geometric-intersection.h  rect.h
lib2geom/src/: CMakeLists.txt
lib2geom/src/2geom/: CMakeLists.txt  bezier-clipping.cpp  solve-bezier.cpp  svg-path-writer.cpp
lib2geom/src/2geom/orphan-code/: redblack-toy.cpp
lib2geom/src/toys/: CMakeLists.txt  auto-cross.cpp  boolops-toy.cpp  conic-section-toy.cpp  cylinder3d.cpp  elliptical-arc-toy.cpp  find-derivative.cpp  ineaa.cpp  inner-product-clip.cpp  line-toy.cpp  parametrics.cpp  pencil-2.cpp  pencil.cpp  portion-test.cpp  rect-toy.cpp  rtree-toy.cpp  squiggles.cpp  toy-framework-2.cpp
lib2geom/tests/: CMakeLists.txt  bezier-test.cpp  line-segment-intersection-test.cpp  path-test.cpp  rect-test.cpp
src/core/image/: imagemap.cpp
src/core/svg/: svg.cpp
src/engines/potrace/: potrace.cpp
src/filters/: filterset.cpp
src/filters/quantize/: quantize.cpp
src/trace/: trace.cpp
svg/: path-string.cpp  path-string.h  stringstream.cpp  svg-length.cpp  svg-length.h  svg-path.cpp  svg-path.h  svg-writer.cpp  svg-writer.h  svg.h
trace/: cielab.cpp  filterset.cpp  filterset.h  imagemap-gdk.cpp  ppotrace.cpp  ppotrace.h  siox.h  trace.cpp  trace.h
trace/engine/potrace/: potrace.cpp  potrace.h
trace/filterset/: filterset.h
trace/filterset/quantize/: quantize.h
trace/imagemap/: imagemap.cpp
util/: units.cpp  units.h
util-string/: string-convert.cpp  string-convert.h  ustring-format.h
util/numeric/: converters.h
